# varmap

./: Cargo.toml  README.md
banches/: Cargo.toml
banches/src/: data.rs  main.rs  string_tests.rs
tester/: Cargo.toml
tester/src/: main.rs
varmap/: Cargo.toml
varmap-proc-macro/: Cargo.toml
varmap-proc-macro/src/: copy_types.rs  derive.rs  lib.rs
varmap/src/: arena.rs  enum_var_map.rs  key.rs  lib.rs  mem_align.rs  str_var_map.rs  string_var_map.rs  tests.rs  traits.rs  types.rs  value.rs  var_map.rs
varmap/src/types/: bool.rs  bytes.rs  char.rs  ip.rs  numbers.rs  strings.rs
