[package]
name = "varmap_proc_macro"
version = "0.1.0"
edition = "2021"
authors = ["Gavrilut Dragos <gavrilut.dragos@gmail.com>"]
description = "Procedural macros for the varmap library."
license = "MIT"
repository = "https://github.com/gdt050579/varmap"
readme = "../README.md"
keywords = ["varmap", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]
documentation = "https://docs.rs/varmap-proc-macro"

[lib]
proc-macro = true

[dependencies]

[lints]
workspace = true