[package]
name = "varmap"
version = "0.1.0"
edition = "2021"
authors = ["Gavrilut Dragos <gavrilut.dragos@gmail.com>"]
license = "MIT"
description = ""
repository = "https://github.com/gdt050579/varmap"
homepage = "https://gdt050579.github.io/varmap/"
documentation = "https://docs.rs/varmap"
readme = "../README.md"
#keywords = ["filtering", "predicate", "rules", "expression", "query"]
#categories = ["data-structures", "parser-implementations", "algorithms"]

[lib]
name = "varmap"

[features]

[dependencies]
varmap_proc_macro = { path = "../varmap-proc-macro" }
