[package]
name = "varmap"
version = "0.1.0"
edition = "2021"
authors = ["Gavrilut Dragos <gavrilut.dragos@gmail.com>"]
license = "MIT"
description = "Fast, heterogeneous key–value maps for Rust. Store mixed types (integers, strings, bytes, custom structs) under a single key namespace, with compile-time keys, runtime strings, or enum variants. Arena-backed for zero-copy reads of strings and byte slices."
repository = "https://github.com/gdt050579/varmap"
homepage = "https://github.com/gdt050579/varmap"
documentation = "https://docs.rs/varmap"
readme = "../README.md"
keywords = ["map", "kv", "arena", "heterogeneous", "fnv"]
categories = ["data-structures", "caching", "algorithms"]

[lib]
name = "varmap"

[features]

[dependencies]
# varmap_proc_macro = { path = "../varmap-proc-macro" }
varmap_proc_macro = "0.1.0"
